--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,6 @@
     <div id="app">
     </div>
     
-    <script src="./app.bundle.js"></script>
+    <script src="./app.js"></script>
   </body>
 </html>
